--- a/src/styles/blocks/getStarted.scss
+++ b/src/styles/blocks/getStarted.scss
@@ -41,16 +41,20 @@
   }
 
   &__section {
-    margin-bottom: 40px;
+    margin-bottom: 100px;
   }
 
   &__hero {
     display: block;
-    width: 500px;
+    width: 480px;
     margin-bottom: 100px;
 
-    @include desktop {
-      width: 580px;
+    @include tablet {
+      width: 560px;
     }
+  }
+
+  &__centered {
+    margin: 0 auto;
   }
 }
