--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -61,6 +61,20 @@
     &:hover {
       color: #19191B;
     }
+
+    &::after {
+      content: "";
+      display: block;
+      width: 0;
+      height: 2px;
+      background: #5454D4;
+      transition: width 0.3s ease-in-out;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
+  }
+
   }
   }
-}
